--- a/Wireframe/0_Homepage/Main.css
+++ b/Wireframe/0_Homepage/Main.css
@@ -381,7 +381,7 @@ body {
     background-color: #ffffff; /* White background for even rows */
 }
 
-.container {
+/* .container {
     width: 100%;
     overflow: hidden;
     display: flex;
@@ -427,7 +427,7 @@ body {
     padding: 20px;
 
     width: 15%;
-    /*height: 100%;*/
+    height: 100%;
 
 }
 
@@ -445,7 +445,70 @@ body {
     border: 1px solid #d3d3d3;
     padding: 10px;
     background-color: #f8f8f8;
+}  */
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+  }
+  
+  /* Style the buttons that are used to open the tab content */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    background: #fff;
+    border: 1px solid #000;
+    padding: 20px;
+    margin-right: 10px;
+  }
+
+.tabcontent h2 {
+    font-size: 1.2em;
+    margin: 0 0 10px 0;
 }
+
+.tabcontent textarea {
+    width: calc(100% - 20px);
+    height: 100px;
+    margin-bottom: 10px;
+}
+
+.tabcontent select, .form-section input[type=submit] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+#problemtext{
+    font-weight: bold;
+}
+
+#data{
+    font-size: 12pt;
+    font-weight: bold;
+}
+
 
 .center input[type=submit] {
     border: 2px solid #000;
